fix:   重写设计了前端点击图片的效果 clear:   清理迁移代码